add few permanent fix to jenkin docker

--- a/custom_jenkins/Dockerfile
+++ b/custom_jenkins/Dockerfile
@@ -1,10 +1,10 @@
-# Use the Jenkins image as the base image
+# Use the Jenkins LTS image as base
 FROM jenkins/jenkins:lts
 
-# Switch to root user to install dependencies
+# Switch to root
 USER root
 
-# Install prerequisites and Docker
+# Install Docker CLI inside Jenkins container
 RUN apt-get update -y && \
     apt-get install -y apt-transport-https ca-certificates curl gnupg software-properties-common && \
     curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
@@ -13,13 +13,15 @@ RUN apt-get update -y && \
     apt-get install -y docker-ce docker-ce-cli containerd.io && \
     apt-get clean
 
-# Add Jenkins user to the Docker group (create if it doesn't exist)
-RUN groupadd -f docker && \
-    usermod -aG docker jenkins
+# Add jenkins user to docker group
+RUN groupadd -f docker && usermod -aG docker jenkins
 
-# Create the Docker directory and volume for DinD
-RUN mkdir -p /var/lib/docker
-VOLUME /var/lib/docker
+# Add startup script for fixing docker.sock permissions
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
-# Switch back to the Jenkins user
+# Switch back to Jenkins user by default
 USER jenkins
+
+# Use our custom entrypoint to fix docker.sock at runtime
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
